[gd_scene load_steps=3 format=3 uid="uid://ttio58v0r508"]

[ext_resource type="Script" uid="uid://dilkwd0xn24jl" path="res://data/cards/card_act_attack_display.gd" id="1_alsyj"]
[ext_resource type="Script" uid="uid://brqvir3uo80xh" path="res://data/cards/AutoShrinkLabel.gd" id="2_hxspy"]

[node name="CardActAttackDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 157.0
offset_bottom = 212.0
script = ExtResource("1_alsyj")

[node name="BackgroundColour" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 157.0
offset_bottom = 211.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 156.0
offset_bottom = 212.0

[node name="CardNameLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(2, 2)
layout_mode = 2
theme_override_font_sizes/font_size = 13
horizontal_alignment = 2
autowrap_mode = 3

[node name="CardCostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="CardTypeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="CardSubtypeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="CardPowerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="CardStatLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="CardElementLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="CardDescriptionLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(2, 2)
layout_mode = 2
horizontal_alignment = 2
autowrap_mode = 3
script = ExtResource("2_hxspy")
